--- a/main.css
+++ b/main.css
@@ -11,7 +11,14 @@ body{
 
 .container {
     display: flex;
-    background-color: #000;
+    background: repeating-linear-gradient(
+     180deg,
+     #ff0000,
+     #000000 5px,
+     #ff0000 5px,
+     #000000 10px
+    );
+    background-repeat: repeat;
     position: relative;
     top:250px;
     width: 100vw;
@@ -25,13 +32,29 @@ body{
     text-align: center;
     justify-content: center;
     font-family: 'Caveat', cursive;
+    text-shadow: 3px 3px 5px #000;
+
 }
 
 .words h1 {
-    font-size: 10rem;
+    font-size: 5rem;
+    border-bottom: 1px solid #fff;
+    
 }
 
 .words p {
-    border-top: 1px solid #fff;
-    font-size: 3rem;
+    
+    font-size: 1.5rem;
+}
+
+@media screen and (min-width: 913px){
+    
+    .words h1 {
+        font-size: 10rem;
+    }
+    
+    .words p {
+        border-top: 1px solid #fff;
+        font-size: 3rem;
+   }
 }
