--- a/photography/norecess/main.css
+++ b/photography/norecess/main.css
@@ -50,7 +50,7 @@ h1 {
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-
+    
     /* place-items: center; */
     /* justify-content: center; */
     margin-bottom: 100px;
@@ -77,7 +77,7 @@ h1 {
 
 
 .slides {
-    margin: auto;
+    /* margin: auto; */
     padding: 4px 4px;
     display: block;
     align-items: center;
@@ -90,8 +90,20 @@ h1 {
  
 }
 
+.slides img:hover {
+   /* height: 50% */
+   /* width: 50%; */
+   outline:5px solid white;
+   outline-offset: -5px;
+   
+   /* border-radius: 15px; */
+   /* margin:5px 5px; */
+   /* transform: scale(1.5); */
+ }  
+
 .slides img {
-    margin: 10px 10px;
+    /* margin: 10px 10px; */
+    Margin: 10px;
     align-items: center;
     height: 250px;
     width: 250px;
@@ -103,14 +115,6 @@ h1 {
     
 }
 
-.slides img:hover {
-   /* height: 50% */
-   /* width: 50%; */
-   border:5px solid white;
-   /* border-radius: 15px; */
-   margin:5px 5px;
-   /* transform: scale(1.5); */
-} 
 
 .grayout {
     left: 0px;
